[gd_scene load_steps=3 format=2]

[ext_resource path="res://TutorialNode.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 4, 4, 4 )

[node name="TutorialNode" type="Area"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_TutorialNode_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_TutorialNode_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
